WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
205012
Regression(
r249329
) ViewGestureController::requestRenderTreeSizeNotificationIfNeeded() sometimes uses wrong webPageID for IPC
https://bugs.webkit.org/show_bug.cgi?id=205012
Summary
Regression(r249329) ViewGestureController::requestRenderTreeSizeNotificationI...
Chris Dumez
Reported
2019-12-09 08:53:56 PST
Since
r249329
, ViewGestureController::requestRenderTreeSizeNotificationIfNeeded() uses the wrong webPageID for IPC when the navigation swaps process.
Attachments
Patch
(15.75 KB, patch)
2019-12-09 09:09 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(15.31 KB, patch)
2019-12-09 09:18 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(15.81 KB, patch)
2019-12-09 13:21 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(16.26 KB, patch)
2019-12-09 13:59 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(16.26 KB, patch)
2019-12-09 14:00 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2019-12-09 09:09:54 PST
Created
attachment 385157
[details]
Patch
Chris Dumez
Comment 2
2019-12-09 09:18:10 PST
Created
attachment 385158
[details]
Patch
Tim Horton
Comment 3
2019-12-09 10:38:31 PST
Comment on
attachment 385158
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=385158&action=review
> Source/WebKit/UIProcess/ViewGestureController.cpp:614 > + messageSender->send(Messages::ViewGestureGeometryCollector::SetRenderTreeSizeNotificationThreshold(threshold));
Kinda sad VGC needs to know about provisional pages at all.
Chris Dumez
Comment 4
2019-12-09 11:04:18 PST
(In reply to Tim Horton from
comment #3
)
> Comment on
attachment 385158
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=385158&action=review
> > > Source/WebKit/UIProcess/ViewGestureController.cpp:614 > > + messageSender->send(Messages::ViewGestureGeometryCollector::SetRenderTreeSizeNotificationThreshold(threshold)); > > Kinda sad VGC needs to know about provisional pages at all.
Agreed, will look into doing this better in a follow-up.
Chris Dumez
Comment 5
2019-12-09 13:21:20 PST
Created
attachment 385181
[details]
Patch
Chris Dumez
Comment 6
2019-12-09 13:59:43 PST
Created
attachment 385187
[details]
Patch
Chris Dumez
Comment 7
2019-12-09 14:00:40 PST
Created
attachment 385188
[details]
Patch
WebKit Commit Bot
Comment 8
2019-12-09 15:40:03 PST
Comment on
attachment 385188
[details]
Patch Clearing flags on attachment: 385188 Committed
r253304
: <
https://trac.webkit.org/changeset/253304
>
WebKit Commit Bot
Comment 9
2019-12-09 15:40:05 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 10
2019-12-09 15:41:45 PST
<
rdar://problem/57771723
>
Alice Mikhaylenko
Comment 11
2019-12-30 12:41:56 PST
***
Bug 202568
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug